working on the language emplementation, adjusted FillOnScroll, fixed layout bleeding on arabic

--- a/src/styles/globals/_base.css
+++ b/src/styles/globals/_base.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box !important;
-  font-size: 100%;
+  /* font-size: 100%; */
 }
 
 *,
@@ -11,6 +11,7 @@ html {
   padding: 0;
   min-width: 0;
 }
+
 *::selection {
   background: #005670;
   color: #ffffff;
@@ -21,8 +22,7 @@ body {
   background-color: var(--background-color);
   background-repeat: no-repeat;
   background-size: cover;
-  /* font-family: 'Sofia Sans', sans-serif; */
-  font-family: 'Sofia Sans Condensed', sans-serif;
+  font-family: var(--font-family);
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: subpixel-antialiased;
   -webkit-font-smoothing: antialiased;
