--- a/src/styles/utils/fonts.css
+++ b/src/styles/utils/fonts.css
@@ -7,3 +7,52 @@
   font-family: 'Sofia Sans';
   src: url('/assets/fonts/Sofia_Sans/SofiaSans-VariableFont_wght.ttf') format('truetype');
 }
+
+/* Lateef */
+@font-face {
+  font-family: 'Lateef';
+  src: url('/assets/fonts/Lateef/Lateef-Bold.ttf') format('truetype');
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Lateef';
+  src: url('/assets/fonts/Lateef/Lateef-ExtraLight.ttf') format('truetype');
+  font-weight: 100;
+}
+
+@font-face {
+  font-family: 'Lateef';
+  src: url('/assets/fonts/Lateef/Lateef-Light.ttf') format('truetype');
+  font-weight: lighter;
+}
+
+@font-face {
+  font-family: 'Lateef';
+  src: url('/assets/fonts/Lateef/Lateef-Regular.ttf') format('truetype');
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'Lateef';
+  src: url('/assets/fonts/Lateef/Lateef-Medium.ttf') format('truetype');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'Lateef';
+  src: url('/assets/fonts/Lateef/Lateef-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: 'Lateef';
+  src: url('/assets/fonts/Lateef/Lateef-Bold.ttf') format('truetype');
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Lateef';
+  src: url('/assets/fonts/Lateef/Lateef-ExtraBold.ttf') format('truetype');
+  font-weight: bolder;
+}
